kubernetes/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: app/app
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app-deployment-svc
spec:
  ports:
  - port: 8080
  #- nodePort: 30669
  #  port: 8080
    targetPort: 8080
  selector:
    app: app
  #type: NodePort
