kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - host: betpawa.test.ee
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-deployment
                port:
                  number: 8080
